REGRESSION(278195@main): A bitmap image may get the size of a subsampled frame https://bugs.webkit.org/show_bug.cgi?id=277495 rdar://129703072

Reviewed by Simon Fraser.

To get the size of an image, the default frame has to be queried from ImageDecoder.
A subsampled frame should not be used to get the size of an image.

* Source/WebCore/platform/graphics/BitmapImageDescriptor.cpp:
(WebCore::BitmapImageDescriptor::primaryImageFrameMetadata const):
(WebCore::BitmapImageDescriptor::sourceSize const):
(WebCore::BitmapImageDescriptor::densityCorrectedSize const):
* Source/WebCore/platform/graphics/BitmapImageDescriptor.h:
* Source/WebCore/platform/graphics/BitmapImageSource.h:
* Source/WebCore/platform/graphics/ImageSource.h:
(WebCore::ImageSource::currentImageFrame):
* Source/WebCore/platform/graphics/NativeImageSource.h:

Canonical link: https://commits.webkit.org/281731@main